--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <title>PropuestaUtl</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+    <!-- <img src="assets/logo_icon.png" alt="Descripción de la imagen" width="300"
+      height="200"> -->
 
     <!-- Bootstrap CSS --->
     <link
